WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186402
REGRESSION(
r224134
) Client certificate challenges don't always appear
https://bugs.webkit.org/show_bug.cgi?id=186402
Summary
REGRESSION(r224134) Client certificate challenges don't always appear
Alex Christensen
Reported
2018-06-07 10:49:14 PDT
REGRESSION(
r224134
) Client certificate challenges don't always appear
Attachments
Patch
(1.88 KB, patch)
2018-06-07 10:50 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(1.87 KB, patch)
2018-06-07 11:40 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2018-06-07 10:50:21 PDT
Created
attachment 342189
[details]
Patch
EWS Watchlist
Comment 2
2018-06-07 10:52:10 PDT
Attachment 342189
[details]
did not pass style-queue: ERROR: Source/WebKit/ChangeLog:5: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebKit/ChangeLog:11: Line contains tab character. [whitespace/tab] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brian Weinstein
Comment 3
2018-06-07 11:18:28 PDT
Comment on
attachment 342189
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=342189&action=review
> Source/WebKit/NetworkProcess/NetworkLoad.cpp:340 > + bool isTLSHandshake = m_challenge->protectionSpace().authenticationScheme() == ProtectionSpaceAuthenticationSchemeServerTrustEvaluationRequested
Is it worth pulling m_challenge->protectionSpace().authenticationScheme() into a local?
Alex Christensen
Comment 4
2018-06-07 11:40:01 PDT
Created
attachment 342194
[details]
Patch
WebKit Commit Bot
Comment 5
2018-06-07 12:19:38 PDT
Comment on
attachment 342194
[details]
Patch Clearing flags on attachment: 342194 Committed
r232594
: <
https://trac.webkit.org/changeset/232594
>
WebKit Commit Bot
Comment 6
2018-06-07 12:19:39 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-06-07 12:20:21 PDT
<
rdar://problem/40905729
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug