REGRESSION(r224134) Client certificate challenges don't always appear https://bugs.webkit.org/show_bug.cgi?id=186402 <rdar://problem/35967150>

Patch by Alex Christensen <achristensen@webkit.org> on 2018-06-07
Reviewed by Brian Weinstein.

* NetworkProcess/NetworkLoad.cpp:
(WebKit::NetworkLoad::completeAuthenticationChallenge):
Add an exception for all TLS-handshake-related challenges, not just server trust.

Canonical link: https://commits.webkit.org/201766@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232594 268f45cc-cd09-0410-ab3c-d52691b4dbfc